# CodeMetricsAnalyser

./: .gitignore  CMA_Documentation.md  CMakeLists.txt  README.md
.github/wokflows/: ci.yml
include/filesystem/: FileScanner.h
include/lexer/: Token.h  lexer.h
include/metrics/: Metrics.h  MetricsEngine.h
include/parser/: ParseResult.h  Parser.h
include/report/: ReportGenerator.h
src/: main.cpp
src/filesystem/: FileScanner.cpp
src/lexer/: Lexer.cpp
src/metrics/: MetricsEngine.cpp
src/parser/: Parser.cpp
src/report/: ReportGenerator.cpp
